# Gradescope

./: .gitignore  README.md  endpoints.md  example.py  pyproject.toml  test.py  test1.py  test2.py  test3.py  todo.md
.github/workflows/: release.yml
docs/: endpoints.md
gradescope/: __init__.py  constants.py  dataclass.py  errors.py  gradescope.py  utils.py
