[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gradescope-tool"
version = "0.1.3"
authors = [
  { name = "HyunJun Park", email = "hyunjup4@uci.edu" },
  { name = "Daniel Song", email = "djsong1@uci.edu" }
]
description = "A Python wrapper for Gradescope to easily retrieve data from your Gradescope Courses."
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  # Instead of REQUIREMENTS, you can point directly to your dependencies here:
  "requests>=2.25.0",
  "beautifulsoup4>=4.9.0",
]

[project.urls]
Homepage = "https://github.com/Teaching-and-Learning-in-Computing/Gradescope"
Repository = "https://github.com/Teaching-and-Learning-in-Computing/Gradescope"

[tool.semantic_release]
version_variable = "pyproject.toml:version"
upload_to_pypi = true
upload_to_release = true
branch = "main"
build_command = "python -m build"
